--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,16 @@
                 android:layout_height="32dp"
                 tools:ignore="InvalidId" />
 
+            <ImageView
+                android:layout_marginEnd="36dp"
+                android:id="@+id/btn_remove_all"
+                app:tint="@color/white"
+                android:layout_gravity="end|center_vertical"
+                app:srcCompat="@drawable/ic_clear"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                tools:ignore="InvalidId" />
+
             <TextView
                 android:layout_gravity="start|center_vertical"
                 android:fontFamily="@font/product_sans_bold"
